Fixed an issue where OPT code width exceeded the specified width, causing scrollbars to appear.

--- a/src/components/Input/style/Input.scss
+++ b/src/components/Input/style/Input.scss
@@ -2,6 +2,7 @@
 
 $component: 'input';
 $cls: #{$prefix}-#{$component};
+$opt-width: 54px;
 
 .#{$cls} {
   display: inline-flex;
@@ -76,7 +77,8 @@ $cls: #{$prefix}-#{$component};
     }
 
     .p-inputotp {
-      gap: 8px;
+      gap: calc((100% - $opt-width * 6) / 5);
+      width: 100%;
     }
 
     &-small input {
@@ -87,7 +89,7 @@ $cls: #{$prefix}-#{$component};
     }
 
     input {
-      width: 54px;
+      width: $opt-width;
       height: 56px;
       padding: 12px 16px;
       color: inherit;
